# aioxcom

./: FUNDING.yml  MANIFEST.in  README.md  example.py  example_api_msg.py  example_api_use.py  example_discover_devices.py  example_discover_moxa.py  example_discovery.py  example_menu.py  note.txt  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: publish.yml
documentation/: moxa discovery.txt  moxa links.txt
src/aioxcom/: __init__.py  xcom_api.py  xcom_api_base.py  xcom_api_lan.py  xcom_api_serial.py  xcom_api_tcp.py  xcom_api_udp.py  xcom_const.py  xcom_data.py  xcom_datapoints.py  xcom_datapoints_120v.json  xcom_datapoints_240v.json  xcom_discover.py  xcom_families.py  xcom_messages.py  xcom_messages_en.json  xcom_multi_info.py  xcom_protocol.py  xcom_values.py
tests/: __init__.py  test_api.py  test_api_serial.py  test_api_udp.py  test_const.py  test_data.py  test_datapoints.py  test_discover.py  test_families.py  test_messages.py  test_multi_info.py  test_protocol.py  test_values.py  xcom_testclient.py  xcom_testclient_serial.py  xcom_testclient_tcp.py  xcom_testclient_udp.py
