[project]
name = "aioxcom"
version = "1.5.0"
authors = [
  { name="Anko Hanse", email="anko_hanse@hotmail.com" },
]
description = "Async python library to communicate with Studer-Innotec devices on the local network via Xcom protocol"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
]

[project.optional-dependencies]
tests = [
  'pytest',
  'pytest-asyncio',
]
 
[project.urls]
Homepage = "https://github.com/ankohanse/aioxcom"
Issues = "https://github.com/ankohanse/aioxcom/issues"

[build-system]
requires = [
    "setuptools>=61.0",
    "wheel",
    "cython"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aioxcom = ["*.json"]

